# grove

./: .gitignore  .gitmodules  .semgrepignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml  todo.txt
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: build-all-docs.yml  ci.yml  docs.yml  pages.yml  security.yml
docs/: Makefile  best-practices.md  cascade-design.md  cascade-guide.md  deferred-ideas.md  git-config-requirements.md  monorepo-tradeoffs.md  push-filtering.md  requirements.txt  submodule-workflow.md  sync-divergence-merge.md  sync-group-cascade-workflow.md  taming-submodules.md  validation-design.md  why-submodules.md  why-worktrees.md  worktree-lifecycle.md  worktrunk-integration-design-claude.md  worktrunk-integration-design-codex.md  worktrunk-integration-design.md  worktrunk-integration-plan.md
docs/source/: conf.py  index.md
scripts/: check_complexity.py
src/grove/: __init__.py  cascade.py  check.py  checkout.py  claude.py  cli.py  cli_dispatch.py  cli_parsers.py  (+21 more)
tests/: conftest.py  test_cascade.py  test_check.py  test_checkout.py  test_claude.py  test_cli.py  test_cli_e2e.py  test_cli_parser_shape.py  test_completion.py  test_complexity.py  test_config.py  test_config_import.py  test_filelock.py  test_hooks.py  test_init.py  test_llm.py  test_push.py  test_repo_utils.py  test_shell.py  test_sync.py  test_sync_merge.py  test_topology.py  test_user_config.py  test_worktree.py  test_worktree_backend.py  test_worktree_list.py  test_worktree_merge.py  test_worktree_step.py  test_worktree_switch.py
(+48 files in other folders)
