[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grove"
version = "0.1.0"
description = "Git submodule management tools"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [{ name = "Cleanroom Labs" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
grove = "grove.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"grove.claude_skills" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
